--- a/react.html
+++ b/react.html
@@ -32,9 +32,10 @@
     <img src="pic/dfitiskin.jpg" alt="Д. Фитискин">
     <h1>Дмитрий Фитискин</h1>
     <p class="position">Head of Netology.Code</p>
-    <ul class="fa ul">
-      <li><a href="mailto:" class="fa-icon"><i class="far fa-envelope"></i></a><a href="mailto:">e-mail</a></li>
-      <li><a href="http://facebook.com/dfitiskin" class="fa-icon"><i class="fab fa-facebook"></i></a><a href="http://facebook.com/dfitiskin">facebook.com/dfitiskin</a></li>
+    <ul class="contacts">
+      <li><a href="mailto:dfitiskin@gmail.ru"><i class="fa fa-envelope-o" aria-hidden="true"></i>dfitiskin@gmail.ru</a></li>
+      <li><a href="skype:dfitiskin?call"><i class="fa fa-skype" aria-hidden="true"></i>dfitiskin</a></li>
+      <li><a href="https://fb.me/dfitiskin"><i class="fa fa-facebook" aria-hidden="true"></i>fb.me/dfitiskin</a></li>
     </ul>
   </section>
 
@@ -890,9 +891,10 @@
   <section class="slide last author contacts">
     <p class="thanx">Задавайте вопросы и напишите отзыв о лекции!</p>
     <h1>Дмитрий Фитискин</h1>
-    <ul class="fa ul">
-      <li><a href="mailto:" class="fa-icon"></a><i class="far fa-envelope"></i><a href="mailto:">e-mail</a></li>
-      <li><a href="http://facebook.com/dfitiskin" class="fa-icon"><i class="fab fa-facebook"></a></i><a href="http://facebook.com/dfitiskin">facebook.com/dfitiskin</a></li>
+    <ul class="contacts">
+      <li><a href="mailto:dfitiskin@gmail.ru"><i class="fa fa-envelope-o" aria-hidden="true"></i>dfitiskin@gmail.ru</a></li>
+      <li><a href="skype:dfitiskin?call"><i class="fa fa-skype" aria-hidden="true"></i>dfitiskin</a></li>
+      <li><a href="https://fb.me/dfitiskin"><i class="fa fa-facebook" aria-hidden="true"></i>fb.me/dfitiskin</a></li>
     </ul>
   </section>
   <div class="progress"></div>
