--- a/react.html
+++ b/react.html
@@ -17,21 +17,21 @@
 <body class="shower list">
   <header class="caption">
     <h1>React и другие библиотеки</h1>
-    <p>Дмитрий Фитискин, Head of Netology.Code</p>
+    <p>Дмитрий Фитискин, Нетология</p>
   </header>
 
   <section class="slide" id="cover">
     <h2>React и другие библиотеки</h2>
     <p>
       <img src="pic/dfitiskin.jpg" alt="Д. Фитискин" class="avatar">
-      Дмитрий Фитискин <span class="position">Head of Netology.Code</span>
+      Дмитрий Фитискин <span class="position">Руковожу курсами по программированию в Нетологии</span>
     </p>
   </section>
 
   <section class="slide author contacts" id="author">
     <img src="pic/dfitiskin.jpg" alt="Д. Фитискин">
     <h1>Дмитрий Фитискин</h1>
-    <p class="position">Head of Netology.Code</p>
+    <p class="position">Руковожу курсами по программированию в Нетологии</p>
     <ul class="contacts">
       <li><a href="mailto:dfitiskin@gmail.ru"><i class="fa fa-envelope-o" aria-hidden="true"></i>dfitiskin@gmail.ru</a></li>
       <li><a href="skype:dfitiskin?call"><i class="fa fa-skype" aria-hidden="true"></i>dfitiskin</a></li>
