--- a/react.html
+++ b/react.html
@@ -70,25 +70,23 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Начнём с самого распространенного случая, когда часть данных для веб-страницы мы получаем ассинхронно, например в формате JSON, и эти данные нам нужно представить на странице.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
-    <p>У нас есть сайт, на котором в одном из блоков показываются последние фотографии из Instagram:</p>
-    <pre><code class="language-js line-numbers">
-      function fetchPhotos() {
-        // …
-      }
+    <p>Начнём с самого распространенного случая, когда часть данных для веб-страницы мы получаем ассинхронно, например в формате JSON, и эти данные нам нужно представить на странице.</p>
+    <div class="next">
+      <p>У нас есть сайт, на котором в одном из блоков показываются последние фотографии из Instagram:</p>
+      <pre><code class="language-js line-numbers">
+        function fetchPhotos() {
+          // …
+        }
 
-      fetchPhotos().then(images => {
-        const body = images
-          .map(image => `&lt;img src="${image.url}" /&gt;`)
-          .join(' ');
-        document.querySelector('.instagram').innerHTML = body;
-      })
-    </code></pre>
+        fetchPhotos().then(images => {
+          const body = images
+            .map(image => `&lt;img src="${image.url}" /&gt;`)
+            .join(' ');
+          document.querySelector('.instagram').innerHTML = body;
+        })
+      </code></pre>
+    </div>
   </section>
 
   <section class="slide">
@@ -192,14 +190,12 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Иногда бывают и обратные ситуации: интерфейс уже реализован на React, но мы хотим использовать готовое решение, которое реализовано не на React.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
-    <p>Представим, что у нас есть React-приложение, в котором реализован личный кабинет пользователя. К следующему релизу необходимо добавить туда возможность просматривать все фотографии, которые относятся к пользователю. Из-за сроков было принято решение воспользоваться готовым решением <a href="http://fotorama.io" class="underline-none">Fotorama</a>.</p>
-    <p>Фоторама использует уже созданные узлы DOM-дерева, для создания поверх них фотогаллерею, добавляя дополнительные узлы для управления.</p>
+    <p>Иногда бывают и обратные ситуации: интерфейс уже реализован на React, но мы хотим использовать готовое решение, которое реализовано не на React.</p>
+    <div class="next">
+      <p>Представим, что у нас есть React-приложение, в котором реализован личный кабинет пользователя. К следующему релизу необходимо добавить туда возможность просматривать все фотографии, которые относятся к пользователю. Из-за сроков было принято решение воспользоваться готовым решением <a href="http://fotorama.io" class="underline-none">Fotorama</a>.</p>
+      <p>Фоторама использует уже созданные узлы DOM-дерева, для создания поверх них фотогаллерею, добавляя дополнительные узлы для управления.</p>
+    </div>
   </section>
 
   <section class="slide">
@@ -231,11 +227,11 @@
     </code></pre>
   </section>
 
-  <section class="slide">
+  <section class="slide string-minimize">
     <h2></h2>
     <p>Наш компонент принимает массив изображений и создает для каждого тег <mark class="highliter">&lt;img /&gt;</mark>.</p>
     <p>Следуя документации, контейнер должен содержать класс <mark class="highliter">fotorama</mark>, поэтому мы так же добавили его в <mark class="highliter">&lt;div /&gt;</mark>, который возвращает наш компонент. Остаётся добавить добавить следующие теги:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-js font-string-minimize">
       &lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"&gt;&lt;/script&gt;
       &lt;link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"&gt;
       &lt;script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"&gt;&lt;/script&gt;
@@ -266,17 +262,15 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Отвлечемся немного от фотогалереи, но попробуем учесть полученный опыт при реализации компонента интерактивной карты.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
-    <p>Очень часто в разделе «Контакты» отображается адрес компании. Еще иногда дизайнер рисует схему проезда. Но если дизайнер не картограф, то пользы от такой схемы клиентам будет не много. Поэтому часто вместо схемы помещают блок картой Google или Яндекс, на которой указывают точку, где расположен офис.</p>
-    <p>Давайте попробуем решить эту задачу, создав компонент, который будет добавлять на страницу Яндекс-карту. Сам компонент мы будем использовать примерно вот так:</p>
-    <pre><code class="language-js">
-      &lt;Map center={[55.76, 37.64]} zoom={10} /&gt;
-    </code></pre>
+    <p>Отвлечемся немного от фотогалереи, но попробуем учесть полученный опыт при реализации компонента интерактивной карты.</p>
+    <div class="next">
+      <p>Очень часто в разделе «Контакты» отображается адрес компании. Еще иногда дизайнер рисует схему проезда. Но если дизайнер не картограф, то пользы от такой схемы клиентам будет не много. Поэтому часто вместо схемы помещают блок картой Google или Яндекс, на которой указывают точку, где расположен офис.</p>
+      <p>Давайте попробуем решить эту задачу, создав компонент, который будет добавлять на страницу Яндекс-карту. Сам компонент мы будем использовать примерно вот так:</p>
+      <pre><code class="language-js">
+        &lt;Map center={[55.76, 37.64]} zoom={10} /&gt;
+      </code></pre>
+    </div>
   </section>
 
   <section class="slide">
@@ -293,10 +287,10 @@
     <p>В данной задаче интеграция неизбежна, потому что в отличие от фотогалереи, нет возможности создать компонент карты полностью на React. И нам потребуется метод <mark class="highliter">componentDidMount</mark> жизненного цикла для инициализации карты после того как его контейнер будет помещен в DOM-дерево документа. Поэтому мы будем создавать компонент на основе класса.</p>
   </section>
 
-  <section class="slide">
+  <section class="slide string-minimize">
     <h2>Решение</h2>
     <p>Начнем с подключения библиотеки карты. Он дает доступ к глобальной переменной <mark class="highliter">ymaps</mark>.</p>
-    <pre><code class="language-js">&lt;script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"&gt;&lt;/script&gt;</code></pre>
+    <pre><code class="language-js font-string-minimize">&lt;script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"&gt;&lt;/script&gt;</code></pre>
     <p>Реализуем простой компонент который создаст и вернёт контейнер для карты:</p>
     <pre><code class="language-js line-numbers">
       class Map extends React.Component {
@@ -396,18 +390,16 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Мы решили частную задачу, но создали компонент, который имеет потенциальные проблемы в использовании. В программировании в целом и в React в частности такие проблемы — как бомба замедленного действия. Поэтому нужно стараться их избегать, создавая максимально независимый код.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
-    <p>Доработать компонент <mark class="highliter">Map</mark>, чтобы иметь возможность добавлять на страницу несколько карт:</p>
-    <pre><code class="language-js">
-      &lt;Map center={[55.76, 37.64]} zoom={10} /&gt;
-      &lt;Map center={[53.21, 24.31]} zoom={12} /&gt;
-      &lt;Map center={[61.55, 40.18]} zoom={8} /&gt;
-    </code></pre>
+    <p>Мы решили частную задачу, но создали компонент, который имеет потенциальные проблемы в использовании. В программировании в целом и в React в частности такие проблемы — как бомба замедленного действия. Поэтому нужно стараться их избегать, создавая максимально независимый код.</p>
+    <div class="next">
+      <p>Доработать компонент <mark class="highliter">Map</mark>, чтобы иметь возможность добавлять на страницу несколько карт:</p>
+      <pre><code class="language-js">
+        &lt;Map center={[55.76, 37.64]} zoom={10} /&gt;
+        &lt;Map center={[53.21, 24.31]} zoom={12} /&gt;
+        &lt;Map center={[61.55, 40.18]} zoom={8} /&gt;
+      </code></pre>
+    </div>
   </section>
 
   <section class="slide">
@@ -456,15 +448,13 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Попробуем применить уже опробованные принципы интеграции, применив их для интеграции в React приложения библиотеки jQuery.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
-    <p>Существует интернет-магазин одежды, интерфейс которого полностью построен с использованием библиотеки jQuery. В компании планируется переход на React, но разом переписать весь код невозможно, это слишком дорого.</p>
-    <p>Сейчас выбор размера на странице товара реализован при помощи jQuery-плагина <a href="https://harvesthq.github.io/chosen/" class="underline-none">Chosen</a>. Требуется написать обертку для этого плагина на React.</p>
-    <p class="comment">Chosen — плагин для создания более дружественных к пользователю полей выбора.</p>
+    <p>Попробуем применить уже опробованные принципы интеграции, применив их для интеграции в React приложения библиотеки jQuery.</p>
+    <div class="next">
+      <p>Существует интернет-магазин одежды, интерфейс которого полностью построен с использованием библиотеки jQuery. В компании планируется переход на React, но разом переписать весь код невозможно, это слишком дорого.</p>
+      <p>Сейчас выбор размера на странице товара реализован при помощи jQuery-плагина <a href="https://harvesthq.github.io/chosen/" class="underline-none">Chosen</a>. Требуется написать обертку для этого плагина на React.</p>
+      <p class="comment">Chosen — плагин для создания более дружественных к пользователю полей выбора.</p>
+    </div>
   </section>
 
   <section class="slide">
@@ -586,12 +576,9 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Вернёмся к задаче фотогалереи. Давайте попробуем исправить наш компонент, чтобы он заработал. Ведь Fotorama по сути — это такой же jQuery плагин, как и Chosen.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
+    <p>Вернёмся к задаче фотогалереи. Давайте попробуем исправить наш компонент, чтобы он заработал. Ведь Fotorama по сути — это такой же jQuery плагин, как и Chosen.</p>
+    <div class="next">
     <p>Напомню, мы реализовали компонент, который помещает фотографии на страницу, но фотогалерея из них не создается:</p>
     <pre><code class="language-js line-numbers">
       const Fotorama = ({ images }) => (
@@ -603,6 +590,7 @@
       );
     </code></pre>
     <p>Исправим это и «оживим» галерею.</p>
+    </div>
   </section>
 
   <section class="slide">
@@ -675,7 +663,7 @@
   <section class="slide">
     <h2></h2>
     <p>При этом <mark class="highliter">selectHandler</mark> — функция, которая принимает выбранный размер, и, например, выводит его в консоль:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-js font-func-minimize">
       const selectHandler = size => console.log(`Выбран размер ${size}!`);
     </code></pre>
     <p>В реальном приложении мы можем передать более полезный обработчик, который, например, обновит фотографию товара, соответствующую выбранному размеру.</p>
@@ -743,12 +731,9 @@
   </section>
 
   <section class="slide">
-    <h2></h2>
-    <p>Вернёмся к нашему компоненту карты, добавим ему немного интерактива.</p>
-  </section>
-
-  <section class="slide">
     <h2>Задача</h2>
+    <p>Вернёмся к нашему компоненту карты, добавим ему немного интерактива.</p>
+    <div class="next">
     <p>Мы уже реализовали ранее компонент карты <mark class="highliter">Map</mark>. С того момента компания расширилась, и у неё появилось несколько офисов. Поэтому требуется показать их все на карте. А также при клике на одну из точек иметь возможность обработать выбранную точку:</p>
     <pre><code class="language-js line-numbers">
       &lt;Map
@@ -757,6 +742,7 @@
         points={offices}
         onPointSelect={handlePoint} /&gt;
     </code></pre>
+    </div>
   </section>
 
   <section class="slide">
@@ -772,7 +758,7 @@
       }]
     </code></pre>
     <p>А функция <mark class="highliter">handlePoint</mark> может выглядеть как-то так:</p>
-    <pre><code class="language-js">const handlePoint = point => console.log(`Выбрана точка ${point.title}!`);</code></pre>
+    <pre><code class="language-js font-func-minimize">const handlePoint = point => console.log(`Выбрана точка ${point.title}!`);</code></pre>
   </section>
 
   <section class="slide">
