--- a/react.html
+++ b/react.html
@@ -71,7 +71,7 @@
 
   <section class="slide">
     <h2>Задача</h2>
-    <p>Начнём с самого распространенного случая, когда часть данных для веб-страницы мы получаем ассинхронно, например в формате JSON, и эти данные нам нужно представить на странице.</p>
+    <p>Начнём с самого распространенного случая, когда часть данных для веб-страницы мы получаем асинхронно, например в формате JSON, и эти данные нам нужно представить на странице.</p>
     <div class="next">
       <p>У нас есть сайт, на котором в одном из блоков показываются последние фотографии из Instagram:</p>
       <pre><code class="language-js line-numbers">
