--- a/react.html
+++ b/react.html
@@ -61,7 +61,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p><b>React</b> — библиотека решающая очень узкую задачу: создание и обновление DOM дерева приложения. При этом она не имеет встроенных решений других задач приложения, таких как получение данных, обработка событий, и не накладывает никаких ограничений на их реализацию. Поэтому React подходит для использования в любых приложениях. Его можно встроить в приложения, использующие другие библиотеки, и другие библиотеки можно встроить в React-приложения.</p>
+    <p><b>React</b> — библиотека, решающая очень узкую задачу: создание и обновление DOM дерева приложения. При этом она не имеет встроенных решений других задач приложения, таких как получение данных, обработка событий, и не накладывает никаких ограничений на их реализацию. Поэтому React подходит для использования в любых приложениях. Его можно встроить в приложения, использующие другие библиотеки, и другие библиотеки можно встроить в React-приложения.</p>
     <p>На занятии мы рассмотрим наиболее интересные варианты использования: интеграция с интерактивными картами, с библиотекой jQuery, с готовым решением для фотогаллерей Фоторама и с чистым DOM API. На этих примерах мы разберем общий подход к интеграции приложения с библиотекой React.</p>
   </section>
 
@@ -98,7 +98,7 @@
 
   <section class="slide">
     <h2>Теория</h2>
-    <p>Ответ на этот вопрос нам известен еще с первого занятия. В библиотеке <mark class="highliter">ReactDOM</mark> есть функция <mark class="highliter">render</mark>, который позволяет поместить компонент или JSX в конкретный DOM-узел страницы. В рамках курса мы в основном создавали приложения, которые целиком контролируют DOM-дерево страницы. Но ничто не мешает нам поместить созданный нами компонент не в корневой узел, а например в какой-то более глубокий, например в блок с классом <mark class="highliter">intagram</mark>. При этом остальная часть дерева может контролироваться другими библиотеками.</p>
+    <p>Ответ на этот вопрос нам известен ещё с первого занятия. В библиотеке <mark class="highliter">ReactDOM</mark> есть функция <mark class="highliter">render</mark>, которая позволяет поместить компонент или JSX в конкретный DOM-узел страницы. В рамках курса мы в основном создавали приложения, которые целиком контролируют DOM-дерево страницы. Но ничто не мешает нам поместить созданный нами компонент не в корневой узел, а например, в какой-то более глубокий, например, в блок с классом <mark class="highliter">intagram</mark>. При этом остальная часть дерева может контролироваться другими библиотеками.</p>
   </section>  
 
   <section class="slide">
@@ -156,7 +156,7 @@
       <li>добавить прелоадер для блока на время, пока изображения загружаются</li>
       <li>сделать компонент более универсальным и повторно использовать, задавая имя пользователя Instagram через <mark class="highliter">props</mark>.</li>
     </ul>
-    <p>При этом мы описываем только логику работы компонента и как должен формироваться DOM. А всю оптимизацию и безопасность берет на себя React.</p>
+    <p>При этом мы описываем только логику работы компонента и как должен формироваться DOM. А всю оптимизацию и безопасность берёт на себя React.</p>
 
   </section>
 
@@ -194,7 +194,7 @@
     <p>Иногда бывают и обратные ситуации: интерфейс уже реализован на React, но мы хотим использовать готовое решение, которое реализовано не на React.</p>
     <div class="next">
       <p>Представим, что у нас есть React-приложение, в котором реализован личный кабинет пользователя. К следующему релизу необходимо добавить туда возможность просматривать все фотографии, которые относятся к пользователю. Из-за сроков было принято решение воспользоваться готовым решением <a href="http://fotorama.io" class="underline-none">Fotorama</a>.</p>
-      <p>Фоторама использует уже созданные узлы DOM-дерева, для создания поверх них фотогаллерею, добавляя дополнительные узлы для управления.</p>
+      <p>Фоторама использует уже созданные узлы DOM-дерева, для создания поверх них фотогалереи, добавляя дополнительные узлы для управления.</p>
     </div>
   </section>
 
@@ -242,7 +242,7 @@
   <section class="slide">
     <h2></h2>
     <p><b>Вопрос:</b> Может быть, у кого-то из вас есть предположение почему галерея не работает?</p>
-    <p class="answer next">Библиотека Fotorama так устроена, что в момент загрузки страницы она находит все контейнеры с классом <mark class="highliter-comment">fotorama</mark> и инициализирует фотогалерею в них. Но наш компонент <mark class="highliter-comment">Fotorama</mark> видимо создал узлы чуть позже, и поэтому в момент инициализации они еще не были доступны.</p>
+    <p class="answer next">Библиотека Fotorama так устроена, что в момент загрузки страницы она находит все контейнеры с классом <mark class="highliter-comment">fotorama</mark> и инициализирует фотогалерею в них. Но наш компонент <mark class="highliter-comment">Fotorama</mark>, видимо, создал узлы чуть позже, и поэтому в момент инициализации они ещё не были доступны.</p>
   </section>
 
   <section class="slide">
@@ -265,7 +265,7 @@
     <h2>Задача</h2>
     <p>Отвлечемся немного от фотогалереи, но попробуем учесть полученный опыт при реализации компонента интерактивной карты.</p>
     <div class="next">
-      <p>Очень часто в разделе «Контакты» отображается адрес компании. Еще иногда дизайнер рисует схему проезда. Но если дизайнер не картограф, то пользы от такой схемы клиентам будет не много. Поэтому часто вместо схемы помещают блок картой Google или Яндекс, на которой указывают точку, где расположен офис.</p>
+      <p>Очень часто в разделе «Контакты» отображается адрес компании. Еще иногда дизайнер рисует схему проезда. Но если дизайнер не картограф, то пользы от такой схемы клиентам будет немного. Поэтому часто вместо схемы помещают блок картой Google или Яндекс, на которой указывают точку, где расположен офис.</p>
       <p>Давайте попробуем решить эту задачу, создав компонент, который будет добавлять на страницу Яндекс-карту. Сам компонент мы будем использовать примерно вот так:</p>
       <pre><code class="language-js">
         &lt;Map center={[55.76, 37.64]} zoom={10} /&gt;
@@ -289,9 +289,9 @@
 
   <section class="slide string-minimize">
     <h2>Решение</h2>
-    <p>Начнем с подключения библиотеки карты. Он дает доступ к глобальной переменной <mark class="highliter">ymaps</mark>.</p>
+    <p>Начнем с подключения библиотеки карты. Она дает доступ к глобальной переменной <mark class="highliter">ymaps</mark>.</p>
     <pre><code class="language-js font-string-minimize">&lt;script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"&gt;&lt;/script&gt;</code></pre>
-    <p>Реализуем простой компонент который создаст и вернёт контейнер для карты:</p>
+    <p>Реализуем простой компонент, который создаст и вернёт контейнер для карты:</p>
     <pre><code class="language-js line-numbers">
       class Map extends React.Component {
         render() {
@@ -321,7 +321,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p>Тут мы инициализируем карту вызвав метод библиотеки <mark class="highliter">ymaps.Map</mark>, передав следующие аргументы:</p>
+    <p>Тут мы инициализируем карту, вызвав метод библиотеки <mark class="highliter">ymaps.Map</mark>, передав следующие аргументы:</p>
     <ul>
       <li>идентификатор контейнера — <mark class="highliter">'map'</mark>, в который поместить карту. Мы добавили атрибут <mark class="highliter">id</mark> с таким же текстом контейнеру.</li>
       <li>объект со свойствами карты, указав свойства <mark class="highliter">zoom</mark> — масштаб, и <mark class="highliter">center</mark> — где будет центр карты, берем его из атрибутов компонента <mark class="highliter">this.props.center</mark>.</li>
@@ -351,7 +351,7 @@
   <section class="slide">
     <h2></h2>
     <p>Вот нам и пригодился объект карты, который мы поместили в свойство <mark class="highliter">map</mark> в методе <mark class="highliter">componentDidMount</mark>. И мы воспользовались методом <mark class="highliter">setCenter</mark> (<a href="https://tech.yandex.ru/maps/doc/jsapi/2.1/ref/reference/Map-docpage/#setCenter">документация</a>), чтобы установить новый центр карты и новый масштаб, если что-то из них изменилось.</p>
-    <p>Еще правилом хорошего тона является обязательная «уборка» за собой внутри подобного компонента. Добавим метод <mark class="highliter">componentWillUnmount</mark>, в котором уничтожим карту методом <mark class="highliter">destroy</mark> (<a href="https://tech.yandex.ru/maps/doc/jsapi/2.1/ref/reference/Map-docpage/#destroy">документация</a>) из библиотеки:</p>
+    <p>Ещё правилом хорошего тона является обязательная «уборка» за собой внутри подобного компонента. Добавим метод <mark class="highliter">componentWillUnmount</mark>, в котором уничтожим карту методом <mark class="highliter">destroy</mark> (<a href="https://tech.yandex.ru/maps/doc/jsapi/2.1/ref/reference/Map-docpage/#destroy">документация</a>) из библиотеки:</p>
     <pre><code class="language-js">
       componentWillUnmount() {
       this.map.destroy();
@@ -405,9 +405,9 @@
   <section class="slide">
     <h2>Теория</h2>
     <p><mark class="highliter">id</mark> должны быть уникальными для каждого элемента на странице, не должно быть повторений. Например, мы можем просто добавить возможность передать <mark class="highliter">id</mark> через <mark class="highliter">props</mark>. Но этим решением мы просто перекладываем ответственность на пользователя компонента, а не решаем проблему. Обратимся к документации конструктора <mark class="highliter">ymaps.Map</mark>:</p>
-    <p class="comment">Тип: Object|String. Ссылка на HTML-элемент, в котором размещается карта, или идентификатор этого HTML-элемента.</p>
+    <p class="comment">Тип: Object|String. Ссылка на HTML-элемент, в котором размещается карта или идентификатор этого HTML-элемента.</p>
     <p>Получается, что вместо строки идентификатора мы можем передать сам элемент.</p>
-    <p>Для того чтобы получить ссылку на элемент контейнера карты в React, воспользуемся свойством <mark class="highliter">ref</mark>, которые мы ранее использовали для форм.</p>
+    <p>Для того чтобы получить ссылку на элемент контейнера карты в React, воспользуемся свойством <mark class="highliter">ref</mark>, которое мы ранее использовали для форм.</p>
   </section>
 
   <section class="slide">
@@ -440,7 +440,7 @@
   <section class="slide">
     <h2>Добивка</h2>
     <p>Компоненты React подчиняются тем же правилам, что и обычные html-элементы. В том числе правилу уникальности идентификаторов.</p>
-    <p>Сейчас мы выявили еще один важный принцип интеграции: использовать <mark class="highliter">ref</mark> вместо косвенной адресации по <mark class="highliter">id</mark> или <mark class="highliter">class</mark> внутри компонента. Таким образом мы повышаем независимость компонентов, и снижаем риск возможных конфликтов.</p>
+    <p>Сейчас мы выявили еще один важный принцип интеграции: использовать <mark class="highliter">ref</mark> вместо косвенной адресации по <mark class="highliter">id</mark> или <mark class="highliter">class</mark> внутри компонента. Таким образом мы повышаем независимость компонентов и снижаем риск возможных конфликтов.</p>
   </section>
 
   <section class="slide" id="point-6">
@@ -507,7 +507,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p>Остается инициализировать плагин и уничтожить при удалении компонента:</p>
+    <p>Остаётся инициализировать плагин и уничтожить при удалении компонента:</p>
     <pre><code class="language-js line-numbers">
       componentDidMount() {
         this.$root = $(this.root);
@@ -528,7 +528,7 @@
 
   <section class="slide">
     <h2>Добивка</h2>
-    <p>Если мы работаем с jQuery, то нам всегда нужно помнить об «оборачивании» обычных элементов в jQuery-элементы. Обернутые элементы еще обычно хранят в переменных или свойствах с префиксом <mark class="highliter">$</mark>.</p>
+    <p>Если мы работаем с jQuery, то нам всегда нужно помнить об «оборачивании» обычных элементов в jQuery-элементы. Обернутые элементы ещё обычно хранят в переменных или свойствах с префиксом <mark class="highliter">$</mark>.</p>
     <p>В данном компоненте, чтобы не плодить свойства, в одном из которых сохранена ссылка на <mark class="highliter">&lt;select&gt;</mark> — <mark class="highliter">this.root</mark>, а во втором эта же ссылка, но обернутая в jQuery — <mark class="highliter">this.$root</mark>, можем обернуть узел сразу в ref-колбеке:</p>
   </section>
 
@@ -561,7 +561,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p>Сейчас изменение списка размеров не влияет на работу плагина. Если у нашего компонента меняются дочерние элементы, то DOM-дерево обновляется. Но плагин Chosen не видит этих изменений. Для того чтобы заставить его обновитьс, нужно вызвать на элементе событие <mark class="highliter">chosen:update</mark>. Лучше всего это сделать в методе жизненного цикла <mark class="highliter">componentDidUpdate</mark>:</p>
+    <p>Сейчас изменение списка размеров не влияет на работу плагина. Если у нашего компонента меняются дочерние элементы, то DOM-дерево обновляется. Но плагин Chosen не видит этих изменений. Для того чтобы заставить его обновиться, нужно вызвать на элементе событие <mark class="highliter">chosen:update</mark>. Лучше всего это сделать в методе жизненного цикла <mark class="highliter">componentDidUpdate</mark>:</p>
     <pre><code class="language-js line-numbers">
       componentDidUpdate(prevProps) {
         if (prevProps.children !== this.props.children) {
@@ -577,19 +577,19 @@
 
   <section class="slide">
     <h2>Задача</h2>
-    <p>Вернёмся к задаче фотогалереи. Давайте попробуем исправить наш компонент, чтобы он заработал. Ведь Fotorama по сути — это такой же jQuery плагин, как и Chosen.</p>
+    <p>Вернёмся к задаче фотогалереи. Давайте попробуем исправить наш компонент, чтобы он заработал. Ведь Fotorama по сути — это такой же jQuery-плагин, как и Chosen.</p>
     <div class="next">
-    <p>Напомню, мы реализовали компонент, который помещает фотографии на страницу, но фотогалерея из них не создается:</p>
-    <pre><code class="language-js line-numbers">
-      const Fotorama = ({ images }) => (
-        &lt;div className="fotorama"&gt;
-          {images.map(image => (
-            &lt;img src={image.src} key={image.id} /&gt;
-          ))}
-        &lt;/div&gt;
-      );
-    </code></pre>
-    <p>Исправим это и «оживим» галерею.</p>
+      <p>Напомню, мы реализовали компонент, который помещает фотографии на страницу, но фотогалерея из них не создается:</p>
+      <pre><code class="language-js line-numbers">
+        const Fotorama = ({ images }) => (
+          &lt;div className="fotorama"&gt;
+            {images.map(image => (
+              &lt;img src={image.src} key={image.id} /&gt;
+            ))}
+          &lt;/div&gt;
+        );
+      </code></pre>
+      <p>Исправим это и «оживим» галерею.</p>
     </div>
   </section>
 
@@ -673,7 +673,7 @@
     <h2>Теория</h2>
     <p>Передавать обработчики событий в другие библиотеки или модули ничем не отличается от процесса передачи обработчиков в DOM. Стратегия реализации точно такая же:</p>
     <ol>
-      <li>Создаем метод в компоненте который будет обрабатывать событие.</li>
+      <li>Создаём метод в компоненте, который будет обрабатывать событие.</li>
       <li>Не забываем позаботиться о контексте вызова этого метода.</li>
       <li>Подписываем метод на событие или передаём в настройки компонента.</li>
     </ol>
@@ -707,7 +707,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p>Теперь просто повесим его на событие <mark class="highliter">change</mark> нашего элемента. Так как мы уже используем jQuery и у нас есть «обёрнутый» элемент, воспользуемся его методами <mark class="highliter">on</mark> и <mark class="highliter">off</mark>:</p>
+    <p>Теперь просто повесим его на событие <mark class="highliter">change</mark> нашего элемента. Так как мы уже используем jQuery, и у нас есть «обёрнутый» элемент, воспользуемся его методами <mark class="highliter">on</mark> и <mark class="highliter">off</mark>:</p>
     <pre><code class="language-js line-numbers">
      componentDidMount() {
       this.$root.chosen();
@@ -868,7 +868,7 @@
   <section class="slide">
     <h2></h2>
     <ol class="continue">
-      <li>Не забывайте «прибрать» за собой, уничтожив всё что создал плагин и все обработчики событий в методе <mark class="highliter">componentWillUnmount</mark>.</li>
+      <li>Не забывайте «прибрать» за собой, уничтожив всё, что создал плагин и все обработчики событий в методе <mark class="highliter">componentWillUnmount</mark>.</li>
       <li>Внимательно изучайте документацию библиотек, чтобы сделать интеграцию правильно.</li>
       <li>Настраивайте для компонента значения свойств по умолчанию (<mark class="highliter">defaultProps</mark>) и валидацию критичных свойств (<mark class="highliter">propTypes</mark>).</li>
     </ol>
