--- a/react.html
+++ b/react.html
@@ -61,7 +61,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p><b>React</b> — библиотека, решающая очень узкую задачу: создание и обновление DOM дерева приложения. При этом она не имеет встроенных решений других задач приложения, таких как получение данных, обработка событий, и не накладывает никаких ограничений на их реализацию. Поэтому React подходит для использования в любых приложениях. Его можно встроить в приложения, использующие другие библиотеки, и другие библиотеки можно встроить в React-приложения.</p>
+    <p><b>React</b> — библиотека, решающая очень узкую задачу: создание и обновление DOM-дерева приложения. При этом она не имеет встроенных решений других задач приложения, таких как получение данных, обработка событий, и не накладывает никаких ограничений на их реализацию. Поэтому React подходит для использования в любых приложениях. Его можно встроить в приложения, использующие другие библиотеки, и другие библиотеки можно встроить в React-приложения.</p>
     <p>На занятии мы рассмотрим наиболее интересные варианты использования: интеграция с интерактивными картами, с библиотекой jQuery, с готовым решением для фотогаллерей Фоторама и с чистым DOM API. На этих примерах мы разберем общий подход к интеграции приложения с библиотекой React.</p>
   </section>
 
