--- a/react.html
+++ b/react.html
@@ -66,7 +66,7 @@
   </section>
 
   <section class="slide" id="point-2">
-    <h2 class="slide-caption">Замена рендеринга, основанного <br>на строках на React-компонент</h2>
+    <h2 class="slide-caption">Замена рендеринга, основанного <br>на строках, на React-компонент</h2>
   </section>
 
   <section class="slide">
