--- a/react.html
+++ b/react.html
@@ -252,7 +252,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p><b>Вопрос:</b> Как можно выполнить какой-то код, после того как поддерево DOM компонента будет готово и доступно в документе?</p>
+    <p><b>Вопрос:</b> Как можно выполнить какой-то код, после того как поддерево DOM-компонента будет готово и доступно в документе?</p>
     <p class="answer next">Для этого у каждого компонента есть методы жизненного цикла этого компонента.</p>
     <p class="next">Когда дерево DOM компонентов готово и доступно в документе, в компоненте вызывается метод <mark class="highliter">componentDidMount</mark>. Выходит, что для таких компонентов нам не подойдут функциональные компоненты. Мы будем использовать компоненты, реализованные на основе классов.</p>
   </section>
