--- a/react.html
+++ b/react.html
@@ -424,7 +424,7 @@
 
   <section class="slide">
     <h2></h2>
-    <p>Теперь перепишем инциализацию карты, передав в <mark class="highliter">ymaps.Map</mark> вместо строки <mark class="highliter">'map'Map</mark> ссылку на элемент из <mark class="highliter">this.node</mark>:</p>
+    <p>Теперь перепишем инциализацию карты, передав в <mark class="highliter">ymaps.Map</mark> вместо строки <mark class="highliter">'map'</mark> ссылку на элемент из <mark class="highliter">this.node</mark>:</p>
     <pre><code class="language-js line-numbers">
       componentDidMount() {
         const { center, zoom } = this.props;
