--- a/react.html
+++ b/react.html
@@ -858,10 +858,10 @@
     <h2></h2>
     <p><b>React</b> — весьма универсальная библиотека, которая может быть легко интегрирована в практически любое приложение. Для этого нужно следовать простым принципам:</p>
     <ol class="start">
-      <li>Используйте для интеграции и обертывания компоненты на основе классов.</li>
-      <li>Используйте прямую ссылку на DOM-узлы, используя свойство <mark class="highliter">ref</mark> вместо поиска по идентификатору или классу.</li>
-      <li>Инициализируйте и обновляйте состояние стороннего плагина в методах жизненного цикла компонента <mark class="highliter">componentDidMount</mark>, <mark class="highliter">componentDidUpdate</mark>, <mark class="highliter">componentWillReceiveProps</mark> и другие.</li>
-      <li>Передавайте методы компонента в качестве обработчика событий в плагин. Не забывайте о контексте вызова.</li>
+      <li class="next">Используйте для интеграции и обертывания компоненты на основе классов.</li>
+      <li class="next">Используйте прямую ссылку на DOM-узлы, используя свойство <mark class="highliter">ref</mark> вместо поиска по идентификатору или классу.</li>
+      <li class="next">Инициализируйте и обновляйте состояние стороннего плагина в методах жизненного цикла компонента <mark class="highliter">componentDidMount</mark>, <mark class="highliter">componentDidUpdate</mark>, <mark class="highliter">componentWillReceiveProps</mark> и другие.</li>
+      <li class="next">Передавайте методы компонента в качестве обработчика событий в плагин. Не забывайте о контексте вызова.</li>
     </ol>
   </section>
 
@@ -869,8 +869,8 @@
     <h2></h2>
     <ol class="continue">
       <li>Не забывайте «прибрать» за собой, уничтожив всё, что создал плагин и все обработчики событий в методе <mark class="highliter">componentWillUnmount</mark>.</li>
-      <li>Внимательно изучайте документацию библиотек, чтобы сделать интеграцию правильно.</li>
-      <li>Настраивайте для компонента значения свойств по умолчанию (<mark class="highliter">defaultProps</mark>) и валидацию критичных свойств (<mark class="highliter">propTypes</mark>).</li>
+      <li class="next">Внимательно изучайте документацию библиотек, чтобы сделать интеграцию правильно.</li>
+      <li class="next">Настраивайте для компонента значения свойств по умолчанию (<mark class="highliter">defaultProps</mark>) и валидацию критичных свойств (<mark class="highliter">propTypes</mark>).</li>
     </ol>
   </section>
 
